[project]
name = "my-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.10.0",
    "dotenv>=0.9.9",
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.0",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.0.0",
    "lark>=1.3.1",
    "psycopg>=3.3.2",
    "pypdf>=6.4.0",
]
